---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module _\n    import tail\n    type _t : tail\nend _\n"
---
"_"@(FileId(1), 7..8) [Module(No)]: <error>
"tail"@(FileId(1), 20..24) [Import]: <error>
"_t"@(FileId(1), 34..36) [Type]: alias[DefId(PackageId(0), LocalDefId(2))] of <error>
"<root>"@(dummy) [Module(No)]: <error>

